--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -63,14 +63,23 @@
         margin-left: calc(-100vw / 2 + 100% / 2);
         margin-right: calc(-100vw / 2 + 100% / 2);
         max-width: 100vw;
-        text-align: center;
     }
 
     .alignwide {
-    	margin-left: -100px;
-    	margin-right: -100px;
+        margin-left: -100px;
+        margin-right: -100px;
         max-width: unset;
-        text-align: center;
     }
 
+}
+
+.ast-header-break-point {
+    .entry-content {
+
+    	.alignwide {
+    		margin-left: auto;
+    		margin-right: auto;
+    	}
+
+    }
 }
